[gd_scene load_steps=2 format=3 uid="uid://bskj5n7qvp0lh"]

[ext_resource type="Script" path="res://scripts/combat/PostBattleAnalysisPanel.gd" id="1_h8v7k"]

[node name="PostBattleAnalysisPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h8v7k")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.113725, 0.180392, 0.9)

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -324.0
offset_right = 512.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel"]
layout_mode = 2

[node name="OutcomeBanner" type="HBoxContainer" parent="MainPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OutcomeLabel" type="Label" parent="MainPanel/VBoxContainer/OutcomeBanner"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "VICTORY"
horizontal_alignment = 1

[node name="BattleDurationLabel" type="Label" parent="MainPanel/VBoxContainer/OutcomeBanner"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Battle Duration: X turns"

[node name="ScrollContainer" type="ScrollContainer" parent="MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="MainPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsSection" type="VBoxContainer" parent="MainPanel/VBoxContainer/ScrollContainer/Content"]
layout_mode = 2

[node name="SuggestionsSection" type="VBoxContainer" parent="MainPanel/VBoxContainer/ScrollContainer/Content"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MainPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "CONTINUE"
